// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<Fragment>
  <span
    className="note"
  >
    event.category.DEFINITION_CHANGE
    :
  </span>
  <div>
    <ResetButtonLink
      className="project-activity-event-inner-more-link"
      onClick={[Function]}
      stopPropagation={true}
    >
      more
      <DropdownIcon
        className="little-spacer-left"
        turned={false}
      />
    </ResetButtonLink>
  </div>
</Fragment>
`;

exports[`should render 2`] = `
<Fragment>
  <span
    className="note"
  >
    event.category.DEFINITION_CHANGE
    :
  </span>
  <div>
    <ResetButtonLink
      className="project-activity-event-inner-more-link"
      onClick={[Function]}
      stopPropagation={true}
    >
      hide
      <DropdownIcon
        className="little-spacer-left"
        turned={true}
      />
    </ResetButtonLink>
  </div>
  <ul
    className="spacer-left spacer-top"
  >
    <li
      className="display-flex-center spacer-top"
      key="foo"
    >
      <div
        className="text-ellipsis"
      >
        <FormattedMessage
          defaultMessage="event.definition_change.added"
          id="event.definition_change.added"
          values={
            Object {
              "branch": <span
                className="nowrap"
                title="master"
              >
                <BranchIcon
                  className="little-spacer-left text-text-top"
                />
                master
              </span>,
              "project": <Link
                onClick={[Function]}
                onlyActiveOnIndex={false}
                style={Object {}}
                title="Foo"
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": "master",
                      "id": "foo",
                    },
                  }
                }
              >
                Foo
              </Link>,
            }
          }
        />
      </div>
    </li>
    <li
      className="display-flex-center spacer-top"
      key="bar"
    >
      <div
        className="text-ellipsis"
      >
        <FormattedMessage
          defaultMessage="event.definition_change.removed"
          id="event.definition_change.removed"
          values={
            Object {
              "branch": <span
                className="nowrap"
                title="master"
              >
                <BranchIcon
                  className="little-spacer-left text-text-top"
                />
                master
              </span>,
              "project": <Link
                onClick={[Function]}
                onlyActiveOnIndex={false}
                style={Object {}}
                title="Bar"
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": "master",
                      "id": "bar",
                    },
                  }
                }
              >
                Bar
              </Link>,
            }
          }
        />
      </div>
    </li>
  </ul>
</Fragment>
`;

exports[`should render for a branch 1`] = `
<Fragment>
  <span
    className="note"
  >
    event.category.DEFINITION_CHANGE
    :
  </span>
  <div>
    <ResetButtonLink
      className="project-activity-event-inner-more-link"
      onClick={[Function]}
      stopPropagation={true}
    >
      hide
      <DropdownIcon
        className="little-spacer-left"
        turned={true}
      />
    </ResetButtonLink>
  </div>
  <ul
    className="spacer-left spacer-top"
  >
    <li
      className="display-flex-center spacer-top"
      key="foo"
    >
      <div
        className="text-ellipsis"
      >
        <FormattedMessage
          defaultMessage="event.definition_change.branch_added"
          id="event.definition_change.branch_added"
          values={
            Object {
              "branch": <span
                className="nowrap"
                title="feature-x"
              >
                <BranchIcon
                  className="little-spacer-left text-text-top"
                />
                feature-x
              </span>,
              "project": <Link
                onClick={[Function]}
                onlyActiveOnIndex={false}
                style={Object {}}
                title="Foo"
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": "feature-x",
                      "id": "foo",
                    },
                  }
                }
              >
                Foo
              </Link>,
            }
          }
        />
      </div>
    </li>
    <li
      className="display-flex-center spacer-top"
      key="bar"
    >
      <FormattedMessage
        defaultMessage="event.definition_change.branch_replaced"
        id="event.definition_change.branch_replaced"
        values={
          Object {
            "newBranch": <span
              className="nowrap"
              title="feature-y"
            >
              <BranchIcon
                className="little-spacer-left text-text-top"
              />
              feature-y
            </span>,
            "oldBranch": <span
              className="nowrap"
              title="master"
            >
              <BranchIcon
                className="little-spacer-left text-text-top"
              />
              master
            </span>,
            "project": <Link
              onClick={[Function]}
              onlyActiveOnIndex={false}
              style={Object {}}
              title="Bar"
              to={
                Object {
                  "pathname": "/dashboard",
                  "query": Object {
                    "branch": "feature-y",
                    "id": "bar",
                  },
                }
              }
            >
              Bar
            </Link>,
          }
        }
      />
    </li>
  </ul>
</Fragment>
`;
